@@ -1,0 +1,11 @@
+- name: uptime
+  type: group
+  description: >
+    `uptime` contains the operating system uptime metric.
+  fields:
+    - name: duration.ms
+      type: long
+      format: duration
+      input_format: milliseconds
+      description: >
+        The OS uptime in milliseconds.
